--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,10 @@
 		<script type="text/javascript" src="vendor/jquery-ui-1.9.2.custom/js/jquery-1.8.3.js"></script>
 		<script type="text/javascript" src="vendor/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.min.js"></script>
 		<script type="text/javascript" src="vendor/able.js"></script>
+		<script type="text/javascript" src="vendor/Audiolet.min.js"></script>
 		<script type="text/javascript" src="vendor/underscore.js"></script>
 		<script type="text/javascript" src="svg_paths.js"></script>
+		<script type="text/javascript" src="note.js"></script>
 		<script type="text/javascript" src="midi_client.js"></script>
 		<script type="text/javascript" src="note_output.js"></script>
 		<script type="text/javascript" src="game.js"></script>
